# phoskhemia

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  main.py  pyproject.toml  requirements.txt  setup.py  tempCodeRunnerFile.py
phoskhemia/: __init__.py
phoskhemia/analysis/: fitting_functions.py  statistics.py
phoskhemia/data/: __init__.py  io.py  meta.py  spectrum1d.py  spectrum2d.py  spectrum_collections.py  spectrum_handlers.py
phoskhemia/fitting/: __init__.py  fitting_functions.py  global_fit.py  initialization.py  projections.py  reconstructions.py  results.py  solvers.py  statistics.py  validation.py
phoskhemia/kinetics/: __init__.py  base.py  models.py  parameterizations.py
phoskhemia/preprocessing/: corrections.py  downsampling.py  smoothing.py  svd.py  svd_denoise.py  svd_ek.py
phoskhemia/simulation/: absorption.py  lineshapes.py  noise.py  sources.py  transient_absorption.py
phoskhemia/simulation/data/: xenon_lines_286-905.csv
phoskhemia/utils/: formatting.py  indexing.py  performance.py  print_utils.py  printing_utils.py  typing.py
phoskhemia/visualization/: colormaps.py  plotting.py
scripts/: analysis.py  create_spectra.py  e15_svd.py  fitting.py  research_style.mplstyle  scrapyard.py
tests/: test_imports.py  test_smooth_bench.py  test_spectrum_handlers.py
