[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phoskhemia"
version = "0.1.05"
description = 'Library for the handling and analysis of chemical spectroscopic data.'
authors = [
    {name = 'Cole Clark', email = 'coleclark012@gmail.com'}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy", 
    "scipy", 
    "matplotlib", 
    "polars", 
    "numba",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]

[project.urls]
"Homepage" = "https://github.com/cclark012/phoskhemia"

[tool.setuptools.package-data]
"phoskhemia.simulation" = ["data/*.csv"]

[tool.setuptools.packages.find]
include = ["phoskhemia*"]
exclude = ["tests*", "examples*", "scripts*", "notebooks*"]
